# jobshoplab

./: .gitignore  CHANGES.md  README.md  gnn_dev.py  pyproject.toml
.github/workflows/: shpinx.yml
data/config/: a_proto_lab_config.yaml  config.yaml  config_gnn_classic_jssp.yaml  config_scaliro.yaml  default_config.yaml  full_example.yaml  getting_started_config.yaml  instance.yaml  instance_3x3_full.yaml  instance_3x3_transport.yaml  instance_proto_lab.yaml  instance_with_1agv.yaml  instance_with_agvs.yaml  instance_with_agvs_jonathan.yaml  instance_with_agvs_jonathan_many_jobs.yaml  jonathan_conf.yaml  real_world_config.yaml  scaliro_protolab_instance.yaml  scaliro_protolab_instance_ft06.yaml  tassel_observation_space_config.yaml
data/jssp_instances/: 2x2  dmu32
data/results/: results.jsonl  transport_batch_training_results.csv
docs/: authors.rst  conf.py  contributing.rst  custom.css  custom.js  custom_observations.rst  getting_started.rst  index.rst  installation.rst  jobshoplab.compiler.rst  jobshoplab.env.factories.rst  jobshoplab.utils.rst  jobshoplab.utils.state_machine_utils.rst  next_steps.rst  testing.rst
docs/_static/: custom.css  mermaid-dark.css  mermaid-init.js  mermaid-light.css  mermaid.js  theme-switcher.js
docs/_templates/: footer.html  layout.html
docs/assets/: architecture.mmd  instance.mmd  rendering.mmd
docs/concepts/: design_choices.rst  middleware.rst  the_dsl.rst
docs/source/: conf.py  index.rst
docs/tutorials/: custom_instances.rst  custom_observations.rst  framework_config.rst  getting_started.rst  visualisation.rst
jobshoplab/: __init__.py
jobshoplab/compiler/: __init__.py  compiler.py  manipulators.py  mapper.py  repos.py  validators.py
jupyter/: getting_started.html  getting_started.ipynb  jupyter_utils.py  stochastic_behavior.ipynb
scripts/: get_test_coverage.sh  make_test_json_dump.py  remove_tabs_from_solutions.py  start_dashboard_from_file.py
tests/: conftest.py
(+249 files in other folders)
